# advent-of-code-2021

./: Cargo.toml
src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  nalgebra_testing.rs
