[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.nom]
version = "7.1.0"
features = ["alloc"]

[dependencies.nalgebra]
version = "0.29.0"

[dependencies.geo]
version = "0.18.0"

[dependencies.itertools]
version = "0.10.3"
